@@ -1,6 +1,4 @@
 .div {
-  --border-width: var(--default-border-width);
-  --border-color: var(--default-border-color);
   display: block;
   color: var(--border-color);
   &::before {
